# quiltc

./: K8S.md  README.md  RESULTS.md
cli/: Cargo.toml
cli/src/: main.rs  snapshot_types.rs
cli/tests/: k8s_cli.rs  snapshot_cli.rs
control/src/: main.rs
control/src/api/: mod.rs
tests/: INIT_GUIDE.md  example.fozzy.json  run.pass.fozzy.json
