[package]
name = "quiltc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }

clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
dirs = "5.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = "0.22"
percent-encoding = "2.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
httpmock = "0.7"
